align issue

--- a/src/app/all-locations/all-locations.page.scss
+++ b/src/app/all-locations/all-locations.page.scss
@@ -57,7 +57,7 @@ ion-content {
 			ion-button {
 				--padding-start: 0;
 			    --padding-end: 0;
-			    margin: 0;
+			    margin: 0px 0px 16px;
 			    border-radius: 5px;
 			    --border-radius: 5px;
 			    // font-size: 25px;
